[tool.poetry]
name = "dz-13-1-classes"
version = "0.1.0"
description = ""
authors = ["Maria Fedorova <maria.i.fedorova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "8.0.1"
funcs = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
